src/test/ui/feature-gates/feature-gate-format_args_nl.rs
fn main() {
    format_args_ln!(""); //~ ERROR `format_args_ln` is only for internal language use
}
